--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "image-hash",
-  "version": "5.0.1",
+  "version": "5.1.0`",
   "description": "Create a hash from an image",
   "main": "lib/imageHash.js",
   "types": "lib/imageHash.d.ts",
@@ -37,22 +37,21 @@
     "request": "^2.81.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.12",
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/plugin-transform-modules-commonjs": "^7.4.4",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-typescript": "^7.1.0",
     "@babel/runtime": "^7.3.1",
-    "@types/mocha": "^8.0.0",
+    "@types/chai": "^4.2.12",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^11.13.8",
-    "@typescript-eslint/eslint-plugin": "^1.7.0",
-    "@typescript-eslint/parser": "^1.7.0",
     "chai": "^4.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-typescript": "^3.0.0",
-    "eslint-plugin-import": "^2.17.2",
-    "mocha": "^8.1.0",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-plugin-import": "^2.25.4",
+    "mocha": "^9.0.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.3.1"
   }
